--- a/app/src/main/res/layout/item_bottom.xml
+++ b/app/src/main/res/layout/item_bottom.xml
@@ -9,6 +9,7 @@
     android:gravity="center"
     android:padding="@dimen/margin_s"
     android:text="@string/action_show_all"
+    android:layout_marginBottom="@dimen/margin_min"
     android:textColor="@color/teal_200"
     android:textSize="@dimen/text_l"
     tools:ignore="UseCompatTextViewDrawableXml" />
