--- a/app/src/main/res/layout/item_sticky.xml
+++ b/app/src/main/res/layout/item_sticky.xml
@@ -19,7 +19,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.3dp"
+        android:layout_height="0.1dp"
         android:layout_gravity="bottom"
+        android:alpha="0.2"
         android:background="@color/design_default_color_on_primary" />
 </FrameLayout>
