--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -4,16 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/vStateIndicator"
-        android:layout_width="7dp"
-        android:layout_height="7dp"
-        android:background="@drawable/circle_indicator"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/profile_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="56dp"
@@ -65,17 +55,9 @@
         app:layout_constraintStart_toEndOf="@+id/profile_image"
         app:layout_constraintTop_toBottomOf="@+id/tvMessageFrom" />
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0.1dp"
-        android:layout_gravity="bottom"
-        android:alpha="0.2"
-        android:background="@color/design_default_color_on_primary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tvMessageHeader" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_s"
@@ -91,6 +73,45 @@
             android:layout_height="wrap_content" />
 
     </ScrollView>
+
+    <View
+        android:id="@+id/viewButtonBackground"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/cardview_dark_background"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvChangeReadStatus" />
+
+    <TextView
+        android:id="@+id/tvChangeReadStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_m"
+        android:gravity="center"
+        android:padding="@dimen/margin_s"
+        android:text="Unread"
+        android:textColor="@color/teal_200"
+        android:textSize="@dimen/text_l"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tvDeleteMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_m"
+        android:gravity="center"
+        android:padding="@dimen/margin_s"
+        android:text="Delete"
+        android:textColor="@color/teal_200"
+        android:textSize="@dimen/text_l"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tvChangeReadStatus" />
 
     <ProgressBar
         android:id="@+id/progressBar"
