--- a/app/src/main/res/drawable/circle_indicator.xml
+++ b/app/src/main/res/drawable/circle_indicator.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval"
-    android:tint="@color/design_default_color_primary"
+    android:tint="@color/purple_500"
     xmlns:android="http://schemas.android.com/apk/res/android" />
